- Callable calls in loops termination condition (mamba)
- UTF-8 fix (mamba)
- Yoda (mamba)
- Array short syntax (mamba)
- Case mismatch in method call or class usage (mamba)
- Type casting (mamba)
- __DIR__ (mamba)
- Callable name case mismatched in a call (mamba)
- php-cs-fixer (mamba)
- ENGINE fix (mamba)
- update README.md (mamba)

<h5>1.31 Beta 1     [2017-10-24]</h5>
<hr>
- Converted to XOOPS 2.5.9/Xmf Admin GUI, PHP 7 compliance (geekwright)

<h5>1.30 Beta 1     2014-03-03]</h5>
<hr>
- Converted to XOOPS 2.5.6 Admin GUI (Mamba)


<h5>1.22            [2008-07-16]</h5>
<hr>

- Changes made by Hervé Thouzard of Instant Zero (http://www.instant-zero.com)
- With some configurations of PHP, it was not possible to access the different parts of the module's administration.
- This version corrects the problem and you should now be able to access all the parts of the administration.



<h5>1.21        [Jul 25, 2006]</h5>
<hr>
- Fixed compatibility problem with XOOPS 2.0.14
- Modified WF-Downloads plugin for padcasting (requires WF-Downloads version 3.1)


<h5>1.2         [Dec 23, 2005]</h5>
<hr>
- (Version 1.5) Fixed incompatibility with XOOPS 2.2.3a
- New editable feed information: copyright
- PHP-debug messages are now completely hidden when prefernece "MIME type of RSS output" is set as "XML", even php-debug is turned on under system admin
- UTF-8 encoding conversion now requires PHP mbstring extension (Reference: http://www.php.net/manual/en/ref.mbstring.php)
- Updated plugins
- Plugins can now serve their own custom tags. (i.e. enclosure)
- Sticky text will now be hidden if either its title or content field is empty
- Contents of item-level's "description" elements are now sectioned using "CDATA" (Reference: http://blogs.law.harvard.edu/tech/encodingDescriptions)
- Fixed "call by reference" errors appear on PHP 4.4 / 5.1
- German, Bulgarian, French language pack added (Thanks DocuAnt, Stefan Ilivanov, Machenzy)

<h5>1.1         [Mar 23, 2005]</h5>
<hr>