@@ -17,14 +17,13 @@
  * @author     XOOPS Development Team
  */
 
-global $xoopsModule;
-$pathIcon32 = \Xmf\Module\Admin::menuIconPath('');
+$pathIcon32      = Xmf\Module\Admin::iconUrl('', 32);
 
 echo "<div class='adminfooter'>\n"
-    ."  <div style='text-align: center;'>\n"
-    ."    <a href='http://www.xoops.org' rel='external'><img src='{$pathIcon32}/xoopsmicrobutton.gif' alt='XOOPS' title='XOOPS'></a>\n"
-    ."  </div>\n"
-     . '  ' . _AM_MODULEADMIN_ADMIN_FOOTER . "\n"
-     . '</div>';
+     ."  <div style='text-align: center;'>\n"
+     ."    <a href='https://xoops.org' rel='external'><img src='{$pathIcon32}/xoopsmicrobutton.gif' alt='XOOPS' title='XOOPS'></a>\n"
+     ."  </div>\n"
+     .'  ' . _AM_MODULEADMIN_ADMIN_FOOTER . "\n"
+     .'</div>';
 
 xoops_cp_footer();
