@@ -48,7 +48,7 @@ switch ($op) {
         $title = new XoopsFormText(_AM_STICKY_TITLE, 'title', 50, 255, $sticky->getVar('misc_title', 'e'));
         $title->setDescription(_AM_EDIT_INTRO_TITLE_DESC);
 
-        $tray_content = new XoopsFormElementTray(_AM_STICKY_CONTENT, '<br />');
+        $tray_content = new XoopsFormElementTray(_AM_STICKY_CONTENT, '<br>');
         $tray_content->setDescription(_AM_EDIT_INTRO_TEXT_DESC);
         $content = new XoopsFormTextArea('', 'content', $sticky->getVar('misc_content', 'e'), 10);
         $tray_content->addElement($content);
