@@ -136,7 +136,7 @@ class RssPluginsHandler extends XoopsObjectHandler
             $result = $this->db->query($sql);
         }
         if (!$result) {
-            $obj->setErrors('Could not store data in the database.<br />'.$this->db->error().' ('.$this->db->errno().')<br />'.$sql);
+            $obj->setErrors('Could not store data in the database.<br>'.$this->db->error().' ('.$this->db->errno().')<br>'.$sql);
             return false;
         }
         if (false === $obj->getVar($this->obj_key)) {
@@ -231,7 +231,7 @@ class RssPluginsHandler extends XoopsObjectHandler
                 $result = $this->db->query($sql);
             }
             if (!$result) {
-                return 'Could not store data in the database.<br />'.$this->db->error().' ('.$this->db->errno().')<br />'.$sql;
+                return 'Could not store data in the database.<br>'.$this->db->error().' ('.$this->db->errno().')<br>'.$sql;
             }
         }
         return false;
