@@ -11,4 +11,4 @@ For the RSS reader software, we recommend <a href="http://ranchero.com/netnewswi
 Here are the URLs for each section\'s feed:
 {SUB}
 By the way, the RSS feed of this site is generated by <a href="http://www.brandycoke.com/products/rssfit/">RSSFit</a>.');
-define('_INSTALL_INTRO_SUB', '<a href="{URL}">{TITLE}</a>: {DESC}<br /><a href="{URL}">{URL}</a><br /><br />');
+define('_INSTALL_INTRO_SUB', '<a href="{URL}">{TITLE}</a>: {DESC}<br><a href="{URL}">{URL}</a><br><br>');
