@@ -61,7 +61,7 @@ class RssfitNews
     {
         $ret = false;
         @include_once XOOPS_ROOT_PATH.'/modules/news/class/class.newsstory.php';
-        $myts = MyTextSanitizer::getInstance();
+        $myts = \MyTextSanitizer::getInstance();
         if ($this->module->getVar('version') >= 130) {
             @include_once XOOPS_ROOT_PATH.'/modules/news/include/functions.php';
             $news = NewsStory::getAllPublished($this->grab, 0, getmoduleoption('restrictindex'));
