@@ -79,7 +79,7 @@ class RssfitSample
     public function &grabEntries(&$obj)
     {
         global $xoopsDB;
-        $myts = MyTextSanitizer::getInstance();
+        $myts = \MyTextSanitizer::getInstance();
         $ret = false;
         $i = 0;
         //	The following example code grabs the latest entries from the module MyLinks
