@@ -81,7 +81,7 @@ class RssfitSpecial
         global $xoopsDB;
         $ret = [];
         @include_once XOOPS_ROOT_PATH.'/modules/special/class/stuff.php';
-        $myts = MyTextSanitizer::getInstance();
+        $myts = \MyTextSanitizer::getInstance();
         $items = SpecialStuff::getAllPublished($this->grab, 0);
         foreach ($items as $item) {
             $ret[] = [
