@@ -15,6 +15,8 @@
 - php-cs-fixer (mamba)
 - ENGINE fix (mamba)
 - update README.md (mamba)
+- added URL links for active plugins in sub-feeds (mamba)
+- added Publisher plugin (mamba)
 
 <h5>1.31 Beta 1     [2017-10-24]</h5>
 <hr>
